--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,5 +37,55 @@ omanoredu.datasource.password=Gloadmin@123
 omanoredu.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
+kiddocraze.datasource.url=jdbc:mysql://88.99.5.236/kiddocraze.visiontrek
+kiddocraze.datasource.username=visiontrek
+kiddocraze.datasource.password=0Gloadmin123#$
+kiddocraze.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+zainiraq.datasource.url=jdbc:mysql://148.251.88.109/zainiraq
+zainiraq.datasource.username=root
+zainiraq.datasource.password=Gloadmin@123
+zainiraq.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+jangukids.datasource.url=jdbc:mysql://88.99.5.236/jangukids
+jangukids.datasource.username=visiontrek
+jangukids.datasource.password=0Gloadmin123#$
+jangukids.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+ethopiagames.datasource.url=jdbc:mysql://88.99.5.236/ethopia_games
+ethopiagames.datasource.username=visiontrek
+ethopiagames.datasource.password=0Gloadmin123#$
+ethopiagames.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+gamedubia.datasource.url=jdbc:mysql://5.189.169.12/9mob_dubai
+gamedubia.datasource.username=root
+gamedubia.datasource.password=gloadmin123
+gamedubia.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+kiddocrazeuae.datasource.url=jdbc:mysql://88.99.5.236/kiddocrazeUAE
+kiddocrazeuae.datasource.username=visiontrek
+kiddocrazeuae.datasource.password=0Gloadmin123#$
+kiddocrazeuae.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+thailand.datasource.url=jdbc:mysql://91.205.172.123:3306/thailand
+thailand.datasource.username=root
+thailand.datasource.password=gloadmin123
+thailand.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+tselmosmsvisiontrek.datasource.url=jdbc:mysql://88.99.163.249:3306/tselMoSmsVisiontrek
+tselmosmsvisiontrek.datasource.username=kenya
+tselmosmsvisiontrek.datasource.password=0Gloadmin123#$
+tselmosmsvisiontrek.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+tselmosmsandy.datasource.url=jdbc:mysql://88.99.163.249:3306/tselMoSmsAndy
+tselmosmsandy.datasource.username=kenya
+tselmosmsandy.datasource.password=0Gloadmin123#$
+tselmosmsandy.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+
+
 
 
