--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 
 server.port=9898
-
 fitoffy.datasource.url=jdbc:mysql://148.251.88.109/yogmania
 fitoffy.datasource.username=root
 fitoffy.datasource.password=Gloadmin@123
@@ -57,9 +56,9 @@ ethopiagames.datasource.username=visiontrek
 ethopiagames.datasource.password=0Gloadmin123#$
 ethopiagames.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-gamedubia.datasource.url=jdbc:mysql://5.189.169.12/9mob_dubai
-gamedubia.datasource.username=root
-gamedubia.datasource.password=gloadmin123
+gamedubia.datasource.url=jdbc:mysql://176.9.90.155/9mob_dubai
+gamedubia.datasource.username=visiontrek
+gamedubia.datasource.password=0Gloadmin123$
 gamedubia.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
